--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
   "devDependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-multi": "^0.1.12",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   }
 }
